--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,25 @@
 {
-    "version" : 2,
-    "build": [{"src" : "./index.js", "use" : "@vercel/node"}],
-    "routes": [{"src" : "/(.*)", "dest" : "/"}]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "client/public" }
+      },
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/$1"
+      }
+    ]
+  }
+  
